--- a/public/reach.css
+++ b/public/reach.css
@@ -7,8 +7,18 @@
     cursor: none;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;          /* disable scrollbars */
+  overscroll-behavior: none; /* no bounce on edges */
+}
+
 body {
-    overflow-x: hidden;
+  position: relative;
+  touch-action: none;        /* stops touch scrolling */
 }
 
 .cursor {
@@ -151,8 +161,8 @@ body {
     display: flex;
     flex-direction: column; /* Stack content vertically */
     align-items: center;
-    margin-top: 20px;
-    padding: 10px;
+    /* margin-top: 20px; */
+    /* padding: 10px; */
     background-color: black;
 }
 
@@ -164,7 +174,7 @@ body {
 
 .social-icon {
     font-size: 30px;
-    margin: 10px;
+    /* margin: 10px; */
     color: white;
 }
 
